--- a/app/views/imovies/show.html.erb
+++ b/app/views/imovies/show.html.erb
@@ -1,6 +1,8 @@
 <div class="col-md-12">
   <div class="imovie">
-    <%= link_to("编辑", edit_imovie_path(@imovie), class: "btn btn-primary pull-right")%>
+    <% if current_user && current_user == @imovie.user %>
+      <%= link_to("编辑", edit_imovie_path(@imovie), class: "btn btn-primary pull-right")%>
+    <% end %>
   </div>
   <h2><%= @imovie.电影名称 %></h2>
   <p><%= @imovie.简介 %></p>
