--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -18,6 +18,9 @@
               <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
+              <li> <%= link_to("我创建的电影", account_imovies_path) %></li>
+              <li> <%= link_to("我发表的评论", account_reviews_path) %></li>
+              <li class="divider"> </li>
               <li> <%= link_to("退出", destroy_user_session_path, method: :delete) %> </li>
             </ul>
           </li>
